feat: Create upload reports endpoint
- Create upload reports service & endpoint
- Add support for .txt upload
- Update swagger.yaml
